--- a/package.json
+++ b/package.json
@@ -32,11 +32,24 @@
   "devDependencies": {
     "@flowaccount/nx-serverless": "^1.0.0-beta.3",
     "@nrwl/cli": "12.5.1",
+    "@nrwl/eslint-plugin-nx": "12.5.1",
+    "@nrwl/jest": "12.5.1",
+    "@nrwl/linter": "12.5.1",
     "@nrwl/tao": "12.5.1",
     "@nrwl/workspace": "12.5.1",
+    "@types/aws-lambda": "^8.10.40",
+    "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
+    "@typescript-eslint/eslint-plugin": "4.19.0",
+    "@typescript-eslint/parser": "4.19.0",
     "dotenv": "8.2.0",
+    "eslint": "7.22.0",
+    "eslint-config-prettier": "8.1.0",
+    "jest": "26.2.2",
     "prettier": "^2.3.1",
+    "serverless": "^2.29.0",
+    "serverless-offline": "7.0.0",
+    "ts-jest": "26.5.5",
     "ts-node": "~9.1.1",
     "typescript": "~4.2.4"
   }
